# simple-edge-tts

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES  deploy.sh  pyproject.toml  version_info.template  workflow.sh
.github/workflows/: ci.yml  release.yml
docs/design/: auto-update.md
docs/plan/: 112-shutdown-reentrancy-test.md  138-run-async-blocking.md  140-app-context.md  175-build-log-verification.md  179-auto-update-download-install.md  2026-06-24-implementation.md  auto-update-ui-170-171-172.md  security-hardening-111-120-121.md  t18-react-ui.md  verification-auto-update-ui.md  verification-v0.1.0.md  wave3-perf-architecture.md  wave3-ui-implementation.md
docs/spec/: 2026-06-24-design.md  2026-06-27-windows-single-file-design.md  ui-design-spec.md
docs/superpowers/specs/: build-packaging-spec.md  config-persistence-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/hooks/: useApi.ts  (+3 more)
src/: api.py  app.py  app_context.py  audio_player.py  config_manager.py  i18n.py  logging_config.py  main.py  system_tray.py  tts_engine.py  update_checker.py  update_manager.py
src/ui/: __init__.py  main_window.py  settings_dialog.py  system_tray.py  text_panel.py  theme.py  voice_panel.py
tests/: test_api.py  test_audio_player.py  test_config_manager.py  test_frozen_paths.py  test_i18n.py  test_logging_config.py  test_shutdown.py  test_system_tray.py  test_tts_engine.py  test_update_checker.py  test_update_manager.py
tests/test_ui/: test_assembly.py  test_main_integration.py  test_main_window.py  test_settings_dialog.py  test_system_tray.py  test_text_panel.py  test_voice_panel.py
(+11 files in other folders)
