[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-edge-tts"
version = "0.1.0"
description = "Cross-platform Edge TTS desktop app with PySide6 GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "cheerc"}]
dependencies = [
    "PySide6>=6.6.0",
    "edge-tts>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-asyncio>=0.21",
    "mypy>=1.8",
    "ruff>=0.3",
    "pyinstaller>=6.0",
]

[project.scripts]
simple-edge-tts = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
