[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-edge-tts"
version = "0.1.0"
description = "Cross-platform Edge TTS desktop app with pywebview GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "cheerc"}]
dependencies = [
    "edge-tts>=6.1.0",
    "pywebview>=5.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "pyinstaller>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
simple-edge-tts = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
